fixed footer issues

--- a/angular2Convert/my-site/src/app/about/about.component.html
+++ b/angular2Convert/my-site/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <title>About</title>
 <app-header-small></app-header-small>
 
-<div class='clearfix about-container empty-vh-container'>
+<div class='clearfix about-container'>
 	<div id="about-pic" class='col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-2'>
 		<div class='col-md-12 col-md-offset-12'>
 			<section id="about-info" class="col-md-12 col-md-offset-0 col-sm-12 col-xs-12">
