--- a/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
+++ b/angular2Convert/my-site/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 <title>Portfolio</title>
 <app-header-small></app-header-small>
-<section class='clearfix empty-vh-container'>
+<section class='clearfix'>
   <div class='items col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
       <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="one" class="circle" href='/relax-workspace'><button type="button" class='circle-btn link-words btn'>Relaxing Workspace</button></a></div>
       <div class='col-md-4 col-sm-6 col-xs-6 item'><a id="two" href=''><button type="button" class='square-btn link-words btn'>Test Test</button></a></div>
