--- a/angular2Dev/inventory-app/src/app/app.component.html
+++ b/angular2Dev/inventory-app/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class='inventory-app'>
-  <products-list [productList]='products' (onProductSelected)='productWasSelected($event)'>
-  </products-list>
+<div class="inventory-app">
+  <app-products-list
+    [productList]="products"
+    (onProductSelected)="productWasSelected($event)">
+  </app-products-list>
 </div>
