--- a/angular2Dev/recipe-finder/src/styles.css
+++ b/angular2Dev/recipe-finder/src/styles.css
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+/*Global styles*/
+body{
+   background-color: #663300;
+}
+header{
+    height: 90px;
+    padding-left: 90px;
+}
+#logoh1{
+    text-indent: -90px;
+    margin: 0;
+    cursor: pointer;
+    font: oblique 50px eurostile;
+    width: 200px;
+}
+.logo{
+    color: rgba(160, 183, 201,1);
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    text-shadow: 0 1px 0 rgba(255,255,255,1) , 0 2px 0 rgba(255,255,255,1) , 0 3px 0 rgba(255,255,255,1) , 0 4px 0 rgba(255,255,255,1) , 0 5px 0 rgba(255,255,255,1) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 -5px 10px rgba(0,0,0,0.247059) , 0 -7px 10px rgba(0,0,0,0.2) , 0 -15px 20px rgba(0,0,0,0.14902) ;
+    -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+    -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+    -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+    transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+}
+.logo:hover{
+    color: rgba(149,160,20,1);
+    text-shadow: 0 1px 0 rgb(204,204,204) , 0 2px 0 rgb(201,201,201) , 0 3px 0 rgb(187,187,187) , 0 4px 0 rgb(185,185,185) , 0 5px 0 rgb(170,170,170) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 5px 10px rgba(0,0,0,0.247059) , 0 10px 10px rgba(0,0,0,0.2) , 0 20px 20px rgba(0,0,0,0.14902) ;
+    -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+.logo:link{
+    color: inherit;
+    text-decoration: none;
+}
+header a:hover{
+    text-decoration: none;
+}
+.search-container{
+    padding-top: 10px;
+    text-align: right;
+}
+.search-container input{
+    border-radius: 20px;
+    padding-left: 10px;
+}
+.search-container button{
+    border-radius: 20px;
+    background: none;
+    border-style: none;
+}
+.navbar-nav li{
+    text-align: center;
+}
+
