--- a/angular2Dev/recipe-finder/src/app/app.component.html
+++ b/angular2Dev/recipe-finder/src/app/app.component.html
@@ -1,3 +1,3 @@
-<p>hello</p>
-
-<p>hello</p>
+<div class="col-md-8 col-md-offset-2">
+    <img class="main-meal-image img-responsive" src="../assets/images/{{bakedTurkeyWrap.imageUrl}}">
+</div>
