--- a/angular2Dev/recipe-finder/src/styles.css
+++ b/angular2Dev/recipe-finder/src/styles.css
@@ -71,3 +71,8 @@ header{
     display: inline-block;
     float: none;
 }
+@media screen and (max-width: 767px){
+    .nav li{
+        font-size: 18px;
+    }
+}
