--- a/angular2Dev/recipe-finder/src/app/app.component.html
+++ b/angular2Dev/recipe-finder/src/app/app.component.html
@@ -1,14 +1,3 @@
-<section id="welcome" class="clearfix">
-    <div  class="col-sm-6 col-sm-offset-3">
-        <h1>Welcome</h1>
-        <p>Please use and contribute to this app freely.  See the about page for more info or contact the developer using the contact form</p>
-    </div>
-</section>
-<div class="clearfix">
-    <section id="favorites" class="col-md-5">
-        <app-favorite-list>...Loading</app-favorite-list>
-    </section>
-    <section id="categories"  class="col-md-6 col-md-offset-1">
-        <!--insert category app-->
-    </section>
-</div>
+<!--Routed Views-->
+<router-outlet></router-outlet>
+
