--- a/angular2Dev/recipe-finder/src/app/welcome/welcome.component.html
+++ b/angular2Dev/recipe-finder/src/app/welcome/welcome.component.html
@@ -7,7 +7,7 @@
 <div class="clearfix">
     <section id="favorites" class="col-md-5">
         <h2>Favorites</h2>
-        <app-favorite-list>...Loading</app-favorite-list>
+        <app-favorites>...Loading</app-favorites>
     </section>
     <section id="categories"  class="col-md-6 col-md-offset-1">
         <h2>Categories</h2>
