--- a/angular2Dev/recipe-finder/src/app/welcome/welcome.component.html
+++ b/angular2Dev/recipe-finder/src/app/welcome/welcome.component.html
@@ -7,10 +7,18 @@
 <div class="clearfix">
     <section id="favorites" class="col-md-5">
         <h2>Favorites</h2>
-        <app-favorites>...Loading</app-favorites>
+        
+        
+        <!--passes all meals to favorites for displaying top three-->
+        <app-favorites
+            [topThreeFavs]="meals"
+
+        
+        
+        >...Loading</app-favorites>
     </section>
     <section id="categories"  class="col-md-6 col-md-offset-1">
         <h2>Categories</h2>
-        <app-categories>...Loading</app-categories>
+        <!--<app-categories>...Loading</app-categories>  Need to crate component -->
     </section>
 </div>
