brief view works

--- a/angular2Dev/recipe-finder/src/app/meal-displays/brief-view/brief-view.component.html
+++ b/angular2Dev/recipe-finder/src/app/meal-displays/brief-view/brief-view.component.html
@@ -1,3 +1,10 @@
-<p>
-  brief-view works!
-</p>
+<div class="clearfix favorite">
+  <div class="col-xs-4">
+    <a href="/meal-view"><img class="img-responsive img-circle" src="../../../assets/images/{{briefMeal.imageName}}"></a>
+  </div>
+
+  <div class="col-xs-8">
+    <a href=""><h3>{{briefMeal.name}}</h3></a>
+    <p>{{briefMeal.description}}</p>
+  </div>
+</div>
