--- a/angular2Dev/recipe-finder/src/app/welcome/welcome.component.html
+++ b/angular2Dev/recipe-finder/src/app/welcome/welcome.component.html
@@ -11,7 +11,7 @@
         
         <!--passes all meals to favorites for displaying top three-->
         <app-favorites
-            [topThreeFavs]="meals"
+            [fullList]="meals"
 
         
         
