--- a/angular2Dev/recipe-finder/src/app/meal-displays/brief-view/brief-view.component.html
+++ b/angular2Dev/recipe-finder/src/app/meal-displays/brief-view/brief-view.component.html
@@ -1,6 +1,6 @@
 <div class="clearfix favorite">
   <div class="col-xs-4">
-    <a href="/meal-view"><img class="img-responsive img-circle" src="../../../assets/images/{{briefMeal.imageName}}"></a>
+    <a href=""><img class="img-responsive img-circle" src="../../../assets/images/{{briefMeal.imageName}}"></a>
   </div>
 
   <div class="col-xs-8">
