--- a/angular2Dev/recipe-finder/src/styles.css
+++ b/angular2Dev/recipe-finder/src/styles.css
@@ -69,6 +69,9 @@ header{
 #content-container h3:hover{
     color: rgba(149,160,20,1);
 }
+#content-container h4:hover{
+    color: burlywood;
+}
 #content-container img:hover{
     border: thin solid rgba(149,160,20,1);
 }
@@ -85,6 +88,10 @@ h2{
 h3{
     color: burlywood;
     margin-top: 0;
+}
+h4{
+    font-size: 180%;
+    color: rgba(149,160,20,1);
 }
 p{
     color: lightgray;
