--- a/angular2Dev/recipe-finder/src/app/meal-displays/brief-view/brief-view.component.html
+++ b/angular2Dev/recipe-finder/src/app/meal-displays/brief-view/brief-view.component.html
@@ -1,5 +1,5 @@
-<div class="clearfix favorite">
-  <div class="col-xs-4">
+<div class="col-xs-12">
+  <div class="col-xs-4 brief-stack">
     <a href=""><img class="img-responsive img-circle" src="../../../assets/images/{{briefMeal.imageName}}"></a>
   </div>
 
