--- a/nodeDev/recipe-finder/src/app/welcome/welcome.component.html
+++ b/nodeDev/recipe-finder/src/app/welcome/welcome.component.html
@@ -8,7 +8,7 @@
     <section id="favorites" class="col-md-5">
         <h2>Favorites</h2>
         <!--passes all meals to favorites for displaying top three-->
-        <app-favorites [fullList]="meals">...Loading</app-favorites>
+        <app-favorites>...Loading</app-favorites>
     </section>
     <section id="categories"  class="col-md-6 col-md-offset-1">
         <h2>Categories</h2>
