--- a/nodeDev/recipe-finder/src/app/meal-displays/single-full-view/single-full-view.component.html
+++ b/nodeDev/recipe-finder/src/app/meal-displays/single-full-view/single-full-view.component.html
@@ -1,11 +1,11 @@
-<div class="clearfix">
+<!--<div class="clearfix">
     <div class="col-sm-6 col-sm-offset-3">
-        <h1 class="name text-center">{{bakedTurkeyWrap.name}}</h1>
+        <h1 class="name text-center">{{singleMeal.name}}</h1>
     </div>
 </div>
 <div class="clearfix">
     <div class="col-sm-6 col-sm-offset-3">
-        <img class="meal-image img-responsive" src="../assets/images/{{bakedTurkeyWrap.imageUrl}}">
+        <img class="meal-image img-responsive" src="../assets/images/{{singleMeal.imageUrl}}">
         <hr width="100px" class="text-center divider">
         <hr width="50px" class="text-center divider">
     </div>
@@ -16,9 +16,9 @@
                     <h3 class="meal-left-column">Description:</h3>
                 </div>
                 <div class="col-sm-9">
-                    <p class="meal-right-column">{{bakedTurkeyWrap.description}}</p>
+                    <p class="meal-right-column">{{singleMeal.description}}</p>
                 </div>
     </div>
     
     
-</div>
+</div>-->
