--- a/nodeDev/recipe-finder/src/app/top-ten-categories/top-ten-categories.component.html
+++ b/nodeDev/recipe-finder/src/app/top-ten-categories/top-ten-categories.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let category of this.categoryArray">
-    <a class="col-xs-6 cat-links" [routerLink]="['/category-view', category]" ><h4 >{{category}}</h4></a>
+<div *ngFor="let topTenCategory of this.topTenCategories">
+    <a class="col-xs-6 cat-links" [routerLink]="['/category-view', topTenCategory.category]" ><h4 >{{topTenCategory.category}}</h4></a>
 </div>
