--- a/nodeDev/recipe-finder/src/app/meal-displays/single-full-view/single-full-view.component.html
+++ b/nodeDev/recipe-finder/src/app/meal-displays/single-full-view/single-full-view.component.html
@@ -1,22 +1,19 @@
-<!--<div class="clearfix">
+<div class="clearfix">
     <div class="col-sm-6 col-sm-offset-3">
-        <h1 class="name text-center">{{singleMeal.name}}</h1>
+        <h1 class="name text-center">{{mealNamePassedInByUrl}}</h1>
     </div>
 </div>
 <div class="clearfix">
-    <div class="col-sm-6 col-sm-offset-3">
-        <img class="meal-image img-responsive" src="../assets/images/{{singleMeal.imageUrl}}">
-        <hr width="100px" class="text-center divider">
-        <hr width="50px" class="text-center divider">
-    </div>
-</div>
+    <app-meal-image-view>...Loading</app-meal-image-view>
+    
+</div><!--
 <div class="container">
     <div class="clearfix">
                 <div class="col-sm-3">
                     <h3 class="meal-left-column">Description:</h3>
                 </div>
                 <div class="col-sm-9">
-                    <p class="meal-right-column">{{singleMeal.description}}</p>
+                    <p class="meal-right-column">{{specifiedMeal.description}}</p>
                 </div>
     </div>
     
