--- a/storeTemplate/src/app/contact/contact.component.html
+++ b/storeTemplate/src/app/contact/contact.component.html
@@ -1,7 +1,5 @@
 <div class="contact-container row" id="contact">
-      <div class="col-sm-7 col-5">
-      </div>
-      <div class="col-sm-5 col-7 contact-info">
+      <div class="col-lg-7 ml-auto col-12 contact-info">
           <div class="contact-info">
               <h5>Your Company Name</h5>
               <ul>
