--- a/storeTemplate/src/app/item-wheel/item-wheel.component.html
+++ b/storeTemplate/src/app/item-wheel/item-wheel.component.html
@@ -1,5 +1,7 @@
 <div class="item-wheel-container row" id="item-wheel">
+  <h3 class="mx-auto">Featured Items</h3>
   <div class="wheel-container col-12">
 
   </div>
+  <p class="mx-auto">To see more of our products, please come in!</p>
 </div>
