--- a/storeTemplate/src/app/contact/contact.component.css
+++ b/storeTemplate/src/app/contact/contact.component.css
@@ -1,8 +1,6 @@
 .contact-container{
-    background-image: url("../../assets/contact-background.jpg");
-    background-color: #7f7959;
-    background-size: 100% 100%;
-    height: 200px;
+    background: #7f7959 url("../../assets/contact-background.jpg") no-repeat top;
+    height: 400px;
     border-radius: 3%;
 }
 .contact-info{
@@ -14,11 +12,11 @@
     padding-top: 1em;
 }
 h5{
-    font-size: 1.3em;
+    font-size: 2.6em;
 }
 li{
     color: white;
-    font-size: 0.8em;
+    font-size: 1.8em;
 }
 .address{
     color: inherit;
