--- a/storeTemplate/src/app/item-wheel/item-wheel.component.css
+++ b/storeTemplate/src/app/item-wheel/item-wheel.component.css
@@ -2,12 +2,11 @@
     height: 500px;
     border-radius: 2%;
     padding: 60px 20px;
-    background: #7f7959 url("../../assets/item-background.jpg") no-repeat center;
+    background: #7f7959 url("../../assets/store-front.jpg") no-repeat center;
     color: white;
 }
 
 .wheel-container{
-    border: solid 1px #000000;
     border-radius: 2%;
     height: 300px;
     overflow-x: scroll;
@@ -23,14 +22,13 @@
 }
 .item-image{
     height: 200px;
-    border-radius: 50px 0 0 50px;
+    border-radius: 50%;
 }
 .item-name{
     background-color: #7f7959aa;
     width: 160px;
     text-align: center;
     margin: auto;
-    border-radius: 50px 0 0 50px;
 }
 .item-cost{
      color: black;
