--- a/storeTemplate/src/app/footer/footer.component.html
+++ b/storeTemplate/src/app/footer/footer.component.html
@@ -4,6 +4,7 @@
             <hr width="50%" color="#363119">
             <li><a href="#services-products">Services &amp; Products</a></li>
             <li><a href="#item-wheel">Featured Items</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
         </ul>
     </div>
 </footer>
