--- a/photoStorage/src/app/app.component.html
+++ b/photoStorage/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="font-sizer">
     <div class="background">
         <h1 class="name">My Groovy picture library</h1>
-        <div class="container">
+        <section class="container">
           <div class="row">
             <div class="col-sm-12 placeholder">
       
@@ -26,22 +26,21 @@
       
             </div>
           </div>
-        </div>
+        </section>
       </div>
-      <div class="container">
-        <div class="row submit-pic">
-          <div class="col-sm-12">
-            <div class="row">
-              <div class="col-sm-6 form">
-      
-              </div>
-              <div class="col-sm-6 preview">
-                  
-              </div>
-            </div>
+      <h2>Contribute Photos</h2>
+      <section class="container submit-pic">
+        <div class="row">
+          <div class="col-sm-6 input-form">
+              <app-input-form>...Loading</app-input-form>
           </div>
-        </div>
-      </div>
+          <div class="col-sm-6">
+              <app-preview>...Loading</app-preview>
+          </div>
+        </div>    
+              
+              
+      </section>
 </div>
 
 
