--- a/photoStorage/src/app/app.component.css
+++ b/photoStorage/src/app/app.component.css
@@ -32,8 +32,20 @@
     border: 4px solid white;
     height: 397px;
 }
+h2{
+    text-align: center;
+    font: italic small-caps bold 3em cursive;
+    color: #4B9CD3;
+    margin-top: 1em;
+}
 .submit-pic{
-    margin-top: 50px;
+    margin-top: 1em;
+    margin-bottom: 4em;
+    border: 2px solid #4B9CD3;
+}
+.input-form{
+    border: 4px solid #489CD3;
+    padding: 1em;
 }
 @media screen and (max-width: 596px){
     .placeholder{
