--- a/photoStorage/src/app/app.component.html
+++ b/photoStorage/src/app/app.component.html
@@ -31,7 +31,7 @@
       <h2>Contribute Photos</h2>
       <section class="container submit-pic">
         <div class="row">
-          <div class="col-sm-6 input-form">
+          <div class="col-sm-6 d-flex input-form">
               <app-input-form>...Loading</app-input-form>
           </div>
           <div class="col-sm-6">
