--- a/photoStorage/src/app/preview/preview.component.html
+++ b/photoStorage/src/app/preview/preview.component.html
@@ -1,3 +1,4 @@
-<p>
-  preview works!
-</p>
+    <div id="upload-container">
+      <img class="img-responsive" id="uploaded" src="#" alt="Your image">
+      <div class="error-message" *ngIf="imageToLarge">That image is too large!<br>Limit: 200 kb</div>
+    </div>
