--- a/photoStorage/src/app/app.component.html
+++ b/photoStorage/src/app/app.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="row search-results">
                         <div class="col-sm-12">
-                          
+                         
                         </div>
                     </div>
                   </div>
@@ -30,16 +30,9 @@
       </div>
       <h2>Contribute Photos</h2>
       <section class="container submit-pic">
-        <div class="row">
-          <div class="col-sm-6 d-flex input-form">
+          <div class="input-form">
               <app-input-form>...Loading</app-input-form>
-          </div>
-          <div class="col-sm-6">
-              <app-preview>...Loading</app-preview>
-          </div>
-        </div>    
-              
-              
+          </div>    
       </section>
 </div>
 
