--- a/photoStorage/src/app/app.component.css
+++ b/photoStorage/src/app/app.component.css
@@ -17,19 +17,19 @@
     border: 2px solid white;
 }
 .left-half{
-    border: 2px solid white;
+    border: 1px solid white;
     height: auto;
 }
 .right-half{
-    border: 2px solid white;
-    height: 800px;
+    border: 1px solid white;
+    height: auto;
 }
 .search{
-    border: 4px solid white;
+    
     height: 397px;
 }
 .search-results{
-    border: 4px solid white;
+    
     height: 397px;
 }
 h2{
@@ -44,8 +44,10 @@ h2{
     border: 2px solid #4B9CD3;
 }
 .input-form{
-    border: 4px solid #489CD3;
     padding: 1em;
+}
+.preview{
+    padding: 2em;
 }
 @media screen and (max-width: 596px){
     .placeholder{
