--- a/photoStorage/src/app/input-form/input-form.component.html
+++ b/photoStorage/src/app/input-form/input-form.component.html
@@ -43,7 +43,7 @@
 
   <div id="upload-container" class="col-sm-6">
     <img class="img-fluid" id="uploaded" src="#" alt="Your image previews here">
-    <div class="error-message" *ngIf="imageToLarge">That image is too large!<br>Limit: 200 kb</div>
+    <div class="error-message" *ngIf="imageToLarge">That image is too large!<br>Limit: 2 Gb</div>
   </div>
 </div>
 
