--- a/photoStorage/src/app/input-form/input-form.component.css
+++ b/photoStorage/src/app/input-form/input-form.component.css
@@ -1,4 +1,7 @@
-#upload-container{
+.img-form-container{
+    position: relative;
+}
+#img-upload-container{
     background-color: #4B9CD332;
     min-height: 200px;
     color: #4B9CD3;
@@ -24,4 +27,28 @@ button:hover{
     border-color: #4B9CD3;
     cursor: pointer;
 }
-
+.status-message{
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #66ff6680;
+    text-align: center;
+    font-size: 2em;
+    padding-top: 200px;
+}
+.status-message button{
+    border-radius: 20px;
+    font-size: 0.7em;
+    padding: 0.5em;
+}
+.status-message p{
+    color: #ffffff;
+    text-shadow:    -1px -1px 0 #000000,
+                1px -1px 0 #000000,
+                -1px 1px 0 #000000,
+                1px 1px 0 #000000;
+}
+#error-message{
+    background-color: #ff000080;
+}
