--- a/photoStorage/src/app/input-form/input-form.component.html
+++ b/photoStorage/src/app/input-form/input-form.component.html
@@ -1,7 +1,8 @@
-<div class="row">
-  <div class="col-sm-6" id="input-form">
-    <form id="image-upload">
-      <input id="image" type="file" #file (change)="updateImageFile(file.files)" accept="*">
+<div class="row img-form-container">
+
+  <div class="col-md-6" id="input-form">
+    <form #imageform>
+      <input id="image" type="file" #file (change)="updateImageFile(file.files)" accept=".jpg, .jpeg, .png, .tiff, .gif, .bmp">
       <div class="error-message" *ngIf="!imageUploaded">Please choose an image</div>
     </form>
     <hr class="small-divider">
@@ -24,8 +25,6 @@
             <input id="contributor" type="text" class="form-control" [formControl]="inputForm.controls['contributor']" [class.error]="!inputForm.controls['contributor'].valid">
             <div class="error-message" *ngIf="!inputForm.controls['contributor'].valid">Your name</div>
             
-            
-            
             <label for="location">Location:</label>
             <input id="location" type="text" class="form-control" [formControl]="inputForm.controls['location']" [class.error]="!inputForm.controls['location'].valid">
             <div class="error-message" *ngIf="!inputForm.controls['location'].valid">Where photo was taken</div>
@@ -35,29 +34,28 @@
             <div class="error-message" *ngIf="!inputForm.controls['category'].valid">Category (ie: landscape, portrait, macro, etc...)</div>
           </div>
 
-          <div *ngIf="inputForm.valid">
+          <div *ngIf="inputForm.valid && imageUploaded">
             <button type="submit" id="contribute-submit" class="btn" ><strong>Send</strong></button>
           </div>
     </form>
   </div>
 
-  <div id="upload-container" class="col-sm-6">
+  <div id="img-upload-container" class="col-md-6">
     <img class="img-fluid" id="uploaded" src="#" alt="Your image previews here">
     <div class="error-message" *ngIf="imageToLarge">That image is too large!<br>Limit: 2 Gb</div>
+  </div>
+
+  <div *ngIf="received" class="status-message">
+    <p>The photo has been submitted <br>
+      without any recorded errors</p>
+    <button (click)="clearMessageAndForm()">Submit more photos</button>
+  </div>
+  
+  <div *ngIf="error" id="error-message" class="status-message">
+    <p>There was an issue submitting your photo<br>
+      Contact administrator for help</p>
+    <button (click)="clearErrorMessage()">Try again</button>
   </div>
 </div>
 
 
-
-  
-
-<!--splash page for email sent
-<div *ngIf="received" class="mail-message img-responsive">
-  <p>Thank you for making contribution!</p>
-  <a routerLink="/welcome">Back to welcome page</a>
-</div>
-    splash page for email sent
-<div *ngIf="error" class="mail-message img-responsive">
-  <p>There seems to be an issue with the email server.  Please try again soon.</p>
-  <a routerLink="/welcome">Back to home page</a>
-</div>-->
