--- a/photoStorage/src/app/app.component.html
+++ b/photoStorage/src/app/app.component.html
@@ -9,7 +9,7 @@
                   <div class="col-sm-6 left-half">
                     <div class="row search">
                       <div class="col-sm-12">
-      
+                        <app-search-results>...Loading</app-search-results>
                       </div>
                     </div>
                     <div class="row search-results">
