--- a/photoStorage/src/app/app.component.html
+++ b/photoStorage/src/app/app.component.html
@@ -1,33 +1,19 @@
 <div class="font-sizer">
     <div class="background">
         <h1 class="name">My Groovy picture library</h1>
-        <section class="container">
+        <section class="container search-container">
           <div class="row">
-            <div class="col-sm-12 placeholder">
-      
-                <div class="row">
-                  <div class="col-sm-6 left-half">
-                    <div class="row search">
-                      <div class="col-sm-12">
-                        <app-search-results>...Loading</app-search-results>
-                      </div>
-                    </div>
-                    <div class="row search-results">
-                        <div class="col-sm-12">
-                         
-                        </div>
-                    </div>
-                  </div>
-      
-                  <div class="col-sm-6 right-half">
-      
-                  </div>
-                </div>
-      
+            <div class="col-12">
+              <app-search>...Loading</app-search>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+                  <app-search-results>...Loading</app-search-results>
             </div>
           </div>
         </section>
-      </div>
+    </div>
       <h2>Contribute Photos</h2>
       <section class="container submit-pic">
           <div class="input-form">
