--- a/photoStorage/src/app/search-results/search-results.component.html
+++ b/photoStorage/src/app/search-results/search-results.component.html
@@ -1,4 +1,3 @@
-<div *ngFor="let photo of photos | async">
-  <p>{{photo.imageName}}</p>
-  <img src='{{photo.image}}'/>
-  </div>
+<div *ngFor='let photo of photos | async' class='img-div'>
+  <app-sanitizer [photo]='photo'>...Loading</app-sanitizer>
+</div>
