--- a/photoStorage/src/app/tools/mini-sanitizer/mini-sanitizer.component.html
+++ b/photoStorage/src/app/tools/mini-sanitizer/mini-sanitizer.component.html
@@ -1,1 +1,2 @@
-<img [src]="url" alt="{{photo.description}}" class="img-fluid"/>
+<img [src]="url" alt="{{photo.description}}" class="photo img-fluid"/>
+<div class="photo-deets">{{photo.date}}<br>{{photo.location}}</div>
