--- a/photoStorage/src/app/search-results/search-results.component.css
+++ b/photoStorage/src/app/search-results/search-results.component.css
@@ -1,3 +1,11 @@
 .img-div{
     display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+@media screen and (max-width: 575px){
+    .img-div{
+        width: 50%;
+    }
 }
