--- a/photoStorage/src/app/search-results/search-results.component.html
+++ b/photoStorage/src/app/search-results/search-results.component.html
@@ -1,3 +1,3 @@
 <div *ngFor='let photo of photos | async' class='img-div'>
-  <app-mini-sanitizer [photo]='photo'>...Loading</app-mini-sanitizer>
+  <app-mini-pics [photo]='photo'>...Loading</app-mini-pics>
 </div>
