--- a/photoStorage/src/app/search-results/search-results.component.css
+++ b/photoStorage/src/app/search-results/search-results.component.css
@@ -4,8 +4,13 @@
     margin: 0;
 }
 
+@media screen and (max-width: 793px){
+    .img-div{
+        width: 25%;
+    }
+}
 @media screen and (max-width: 575px){
     .img-div{
-        width: 50%;
+        width: 33.333333%;
     }
 }
