--- a/photoStorage/src/app/search-results/search-results.component.html
+++ b/photoStorage/src/app/search-results/search-results.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="noResults" class="no-results"><p>No Results Found.  Currenty, only whole word queries are used, 
+    so partial findings are not shown (e.g: "ca" in the word "cat" would produce no results).</p>
+</div>
+<div *ngIf="databaseError" class="error"><p>No Database connection available</p>
+</div>
 <div *ngFor='let photo of photos | async' class='img-div'>
   <app-mini-pics [photo]='photo'>...Loading</app-mini-pics>
 </div>
