--- a/photoStorage/src/app/search-results/search-results.component.html
+++ b/photoStorage/src/app/search-results/search-results.component.html
@@ -4,5 +4,5 @@
 <div *ngIf="databaseError" class="error"><p>No Database connection available</p>
 </div>
 <div *ngFor='let photo of photos | async' class='img-div'>
-  <app-mini-pics [photo]='photo'>...Loading</app-mini-pics>
+  <app-mini-pics [photo]='photo' (previewPhoto)='sendPreview($event)'>...Loading</app-mini-pics>
 </div>
